# whalebone-be-assessment

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
app/: api.py  database.py  main.py  models.py
tests/: test_api.py  wip_test_integration.py
